--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
     "@types/chai": "^4.2.0",
     "@types/mocha": ">=9.1.0",
     "@types/node": ">=12.0.0",
-    "chai": "^4.2.0",
-    "ethers": "^5.4.7",
+    "chai": "^4.3.6",
+    "ethers": "^5.7.2",
     "hardhat": "^2.13.0",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.0",
-    "ts-node": ">=8.0.0",
     "typechain": "^8.1.0",
-    "typescript": ">=4.5.0"
+    "typescript": ">=4.5.0",
+    "prettier": "^2.7.1",
+    "prettier-plugin-solidity": "^1.1.1",
+    "ts-node": "^10.8.2"
   },
   "scripts": {
     "test": "npx hardhat test",
