--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,10 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true
-  }
+    "resolveJsonModule": true,
+    "moduleResolution": "node"
+  },
+  "include": ["./scripts", "./test", "./typechain", "./**/*.ts"],
+  "exclude": ["node_modules"],
+  "files": ["./hardhat.config.ts"]
 }
